# ChangeLog for dev-haskell/gtk2hs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/ChangeLog,v 1.53 2010/03/27 09:01:56 kolmodin Exp $

  27 Mar 2010; Lennart Kolmodin <kolmodin@gentoo.org> gtk2hs-0.10.1.ebuild,
  +files/gtk2hs-0.10.1-ghc-6.12-c2hs.patch,
  +files/gtk2hs-0.10.1-ghc-6.12-packages.patch:
  Fix compilation issues when using GHC 6.12.1, patch from upstream.
  Remove the seamonkey USE flag, see bug #300422.
  If gtk2hs is emerged with doc flag, then mtl need it too.
  Add ~ppc64 keyword, tested by Sergei Trofimovich.
  Work done by Sergei Trofimovich <slyfox@community.haskell.org>.

*gtk2hs-0.10.1 (30 Aug 2009)

  30 Aug 2009; Lennart Kolmodin <kolmodin@gentoo.org> +gtk2hs-0.10.1.ebuild:
  Version bump. Supports ghc 6.10.

  07 Apr 2009; Christian Faulhammer <fauli@gentoo.org> gtk2hs-0.9.11.ebuild,
  gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
  disable Firefox support the hard way and make seamonkey not depend on
  USE=xulrunner

  03 Apr 2009; Christian Faulhammer <fauli@gentoo.org> gtk2hs-0.9.11.ebuild,
  gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
  completely drop support for Firefox as it depends on version 2

  10 Feb 2009; Lennart Kolmodin <kolmodin@gentoo.org>
  +files/gtk2hs-0.9.12.1-librsvg-2.22.3.patch, gtk2hs-0.9.12.1.ebuild:
  Support >=gnome-base/librsvg-2.22.3 with its slightly changed API.
  Patch from upstream, unconditionally patching, see bug #240704.
  Reported by Paulo Jorge de Oliveira Cantante de Matos <pocmatos@gmail.com>,
  handled by Sebastian Magrí <sebasmagri@gmail.com>.

  05 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  16 Jul 2008; Raúl Porcel <armin76@gentoo.org> gtk2hs-0.9.11.ebuild,
  gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
  Fix mozilla deps again, bug #230670

  28 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml: