@@ -3,7 +3,7 @@ AUX gtk2hs-0.10.1-ghc-6.12-packages.patch 15076 RMD160 0c9931317c06f86a4d145e569
 AUX gtk2hs-0.9.12.1-librsvg-2.22.3.patch 335 RMD160 cf96ef312fda9388a3d4cf28058ffa004ebd2b77 SHA1 2908e21aa9bc8e28d61d410f8b8570ad30a59f7f SHA256 e8e4adb06d915a0c1300a3b4bf597930bd20ba5fd7bd7f9121fc999ccf855577
 DIST gtk2hs-0.10.1.tar.gz 1451125 RMD160 c72acd0e2c5471c7757532cfb44c841be8e83f1d SHA1 808d8c80026b82dc2b1347055efba82f8847c424 SHA256 07cc98520ce6c9e0d2549fd8fd23fc5118148b7509843b0163340713a762d0c0
 DIST gtk2hs-0.9.12.1.tar.gz 1004661 RMD160 cd658027ed91b9550915e686d546e36b1b371c10 SHA1 a85f8568aa072e0c55da5889b2aabff92b8da3ae SHA256 4278078b786202fc64f86881c2b2517bdd589d5248bff2e9b7e6c1ffd2361f84
-EBUILD gtk2hs-0.10.1.ebuild 2815 RMD160 4b690d871b4925c12d6d9c8397d69789e1704909 SHA1 18175661afb62b94c9bc0afc75781be0e75d5d73 SHA256 6eb7a7a60fc34e60c245b80239461bb536789c1e4c6eb4451c112ab810925022
-EBUILD gtk2hs-0.9.12.1.ebuild 3321 RMD160 2a5fffc669ea0b03775c9f30c7c36f9a2f8d173e SHA1 8f999e36838b71f4a6a5b4232a8f6d8014330add SHA256 30cdb8d3ef0d93ea01e86ae1b3f867e3c6eb1f82591ee02b2dfeab173e1d9c76
-MISC ChangeLog 8181 RMD160 876f5b969982a1c1b5c8ea9d9b2690272a09404a SHA1 6c6939c9f348d5ae9e5bd3ca023190c569711c91 SHA256 8fc6e506371b02cc5edc03eefacbc227aef81326ab75ae6c1135f3368f8253f8
+EBUILD gtk2hs-0.10.1.ebuild 2884 RMD160 36b130ef5eeaea79f58457834f3e25f883147346 SHA1 05aed9b7d4d8e7cdb65ae525b7c4f05b1c738c10 SHA256 2d029f57bbc7bc85891c559b231107810d336cbbf5afa35016bd2174a4503ecc
+EBUILD gtk2hs-0.9.12.1.ebuild 3087 RMD160 5e493f8dc00c7d5847af2ca086a13545f55abc17 SHA1 571f43731b1c3752cf67e5dbe85839eff2ed401e SHA256 ba3cd5b982c476536ee593ada1bf4c87889c986c31cad0d6d0a214a6ecdd4391
+MISC ChangeLog 8699 RMD160 434b283364437505aa189b7af77766a424f13c1b SHA1 46d1bb63512f28191e5be0780e9c766621c74d8c SHA256 5e663a79c33c080029fa0521808750b0ee40e4ffbca286ffd4db04a3c1228823
 MISC metadata.xml 264 RMD160 d289d41d1d04ed1c3e574a29f53999457dbdc52c SHA1 475c909ed389f5e0508b5cd8e1373db2b96ce75b SHA256 743889dc0a1fac66b79afe2bbc2e61338d1d467aabc7b29977885d61c94a2a82
